IDEUI-134: add MB label to memory size box and fix alignment.

--- a/codenvy-ext-runner/src/main/resources/com/codenvy/ide/extension/runner/client/runner.css
+++ b/codenvy-ext-runner/src/main/resources/com/codenvy/ide/extension/runner/client/runner.css
@@ -22,3 +22,9 @@
 .data-label {
     padding-left: 5px;
 }
+
+.main-style {
+	font-size: fontSize;
+	font-family: mainFontFamily;
+	color: mainFontColor;
+}
